# forradia-world

./: .env.template  .gitignore  README.md  build  build.sh  clean  clean.sh  install_deps  install_deps.sh  ngrok.yml  ngrok.yml.template  old_project_tree.sh  project_tree.sh  start  start_debug_develop  start_develop  start_develop.sh  start_prod  start_prod.sh  template.env
develop/: CMakeLists.txt  conanfile.txt  format_all  uncrustify.cfg
develop/html/: index.html
develop/html/js/: Main.js  ProcessMessage.js  imageNames.js  main.js
develop/include/: aliases.h  app-properties.h  app_properties.h  client-game-session.h  client-manager.h  client.h  engine.h  fps_counter.h  get_singleton.h  graphics.h  i_scene.h  intro-scene.h  intro_scene.h  main-menu-scene.h  main-scene.h  main_menu_scene.h  main_scene.h  main_server.h  on-open.h  on_socket_message.h  on_socket_open.h  scene_manager.h  socket_client.h  socket_clients_manager.h  socket_server.h  web-server.h  web_server.h  world_generation_scene.h
develop/include/math-lib/: size.h
develop/src/: '  Main.cpp  main.cpp
develop/src/Common/: Aliases.h  Aliases.hpp  Get_Singleton.h  Singleton.h
develop/src/Conf/: AppProperties.hpp  App_Properties.h
develop/src/Engine/: Cursor.cpp  Cursor.h  Cursor.hpp  CursorStyles.hpp  Cursor_Styles.h  Engine.cpp  Engine.h  Engine.hpp  FPSCounter.cpp  FPSCounter.hpp  FPS_Counter.cpp  FPS_Counter.h  Graphics.cpp  Graphics.h  Graphics.hpp  IScene.cpp  IScene.hpp  I_Scene.cpp  I_Scene.h  ImageInfoStore.cpp  ImageInfoStore.hpp  Image_Info_Store.cpp  Image_Info_Store.h  SceneManager.cpp  SceneManager.hpp  Scene_Manager.cpp  Scene_Manager.h  Scene_Manager.hpp
develop/src/GUICore/: GUI.hpp  GUIButton.cpp  GUIButton.hpp  GUIComponent.cpp  GUIComponent.hpp  GUILabel.cpp  GUILabel.hpp  GUIPanel.cpp  GUIPanel.hpp  GUI_Button.cpp  GUI_Button.hpp  GUI_Component.cpp  GUI_Component.hpp  GUI_Label.cpp  GUI_Label.hpp  GUI_Panel.cpp  GUI_Panel.hpp
develop/src/GUI_Core/: GUI.h  GUI_Button.cpp  GUI_Button.h  GUI_Component.cpp  GUI_Component.h  GUI_Label.cpp  GUI_Label.h  GUI_Panel.cpp  GUI_Panel.h
develop/src/Input/: KeyboardInput.cpp  KeyboardInput.hpp  Keyboard_Input.cpp  Keyboard_Input.h  MouseButton.cpp  MouseButton.hpp  MouseButtons.hpp  MouseInput.cpp  MouseInput.hpp  Mouse_Button.cpp  Mouse_Button.h  Mouse_Buttons.hpp  Mouse_Input.cpp  Mouse_Input.h  Mouse_Input.hpp
develop/src/MathLib/: Color.hpp  PointF.hpp  RectF.cpp  RectF.hpp  Rect_F.cpp  Rect_F.hpp  Size.hpp  SizeF.hpp
develop/src/Math_Lib/: Color.h  Point_F.h  Rect_F.cpp  Rect_F.h  Size.h  Size_F.h
develop/src/Precomp/: Precomp.h  Precomp.hpp
develop/src/ServersCore/: MainServer.cpp  MainServer.hpp  Main_Server.cpp  Main_Server.hpp  OnSocketMessage.cpp  OnSocketMessage.hpp  OnSocketOpen.cpp  SocketClient.cpp  SocketClient.hpp  SocketClientsManager.cpp  SocketClientsManager.hpp  SocketServer.cpp  SocketServer.hpp  Socket_Client.cpp  Socket_Clients_Manager.cpp  Socket_Server.cpp  WebServer.cpp  WebServer.hpp  Web_Server.cpp
develop/src/Servers_Core/: Main_Server.cpp  Main_Server.h  OnSocketMessage.cpp  OnSocketMessage.h  OnSocketOpen.cpp  OnSocketOpen.h  Socket_Client.cpp  Socket_Client.h  Socket_Clients_Manager.cpp  Socket_Clients_Manager.h  Socket_Server.cpp  Socket_Server.h  Web_Server.cpp  Web_Server.h
develop/src/Theme0/: IntroScene.cpp  IntroScene.hpp  Intro_Scene.cpp  Intro_Scene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  MainScene.cpp  MainScene.hpp  Main_Menu_Scene.cpp  Main_Menu_Scene.hpp  Main_Scene.cpp  Main_Scene.hpp  WorldGenerationScene.cpp  WorldGenerationScene.hpp  World_Generation_Scene.cpp  World_Generation_Scene.hpp
develop/src/Theme_0/: Intro_Scene.cpp  Intro_Scene.h  Main_Menu_Scene.cpp  Main_Menu_Scene.h  Main_Scene.cpp  Main_Scene.h  World_Generation_Scene.cpp  World_Generation_Scene.h
develop/src/Utils/: CanvasUtils.cpp  Canvas_Utils.cpp  Canvas_Utils.h  Canvas_Utils.hpp  Hash.cpp  Hash.hpp  StringUtils.cpp  String_Utils.cpp  String_Utils.hpp  TimeUtils.cpp  Time_Utils.cpp  Time_Utils.hpp
develop/src/common/: aliases.h  aliases.hpp  hash.cpp  singleton.hpp  time-utils.cpp  time_utils.cpp
develop/src/engine/: engine.cpp  engine.h  fps-counter.cpp  fps_counter.cpp  graphics.cpp  graphics.h  i_scene.cpp  i_scene.h  image_info_store.cpp  image_info_store.h  scene-manager.cpp  scene_manager.cpp  scene_manager.h
develop/src/gui-core/: gui.h  gui_component.cpp  gui_component.h  gui_label.cpp  gui_label.h
develop/src/math-lib/: color.h  colors.h  point_f.h
develop/src/precomp/: precomp.hpp
server/: CMakeLists.txt
server/html/: index.html
server/html/JS/: Main.js
server/include/: aliases.h  get-singleton.h  hash.h  i-scene.h  intro-scene.h  main-menu-scene.h  main-scene.h  main-server.h  scene-manager.h  time-utils.h  web-server.h  world-generation-scene.h
server/src/: Main.cpp  main.cpp
(+161 files in other folders)
